<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.com.example.android.mytourguide.MainActivity">

    <!-- Hospital Category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/category_hospital">

        <TextView
            android:id="@+id/hospital"
            style="@style/CategoryStyle"
            android:text="@string/hospital" />
    </FrameLayout>

    <!-- Restaurant Category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/category_restaurant">

        <TextView
            android:id="@+id/restaurant"
            style="@style/CategoryStyle"
            android:text="@string/restaurant" />
    </FrameLayout>

    <!-- School Category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/category_school">

        <TextView
            android:id="@+id/school"
            style="@style/CategoryStyle"
            android:text="@string/school" />
    </FrameLayout>

    <!-- Sports Category -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/category_sports">

        <TextView
            android:id="@+id/sports"
            style="@style/CategoryStyle"
            android:text="@string/sports" />
    </FrameLayout>
</LinearLayout>

